# Algorithms-and-Data-Structures

./: CMakeLists.txt  PRECOMPILEDREADME.md  README.md
C++-Specifics/: CMakeLists.txt
C++-Specifics/Classes/: Animal.cc  Animal.hh  CMakeLists.txt  Example.cc  Mammal.cc  Mammal.hh  README.md
C++-Specifics/Sockets/: CMakeLists.txt  README.md
cmake/: BuildSystemCore.cmake  CloneRepository.CMakeLists.txt.in  CloneRepository.cmake
